# mcp-code-completion

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md
doc/: build-lama-launch.md
lama-launcher/: CMakeLists.txt  conanfile.py  config.json  pyrightconfig.json
lama-launcher/src/: lama-embeded.cpp  lama_embeded.h  lama_server.cpp  lama_server.h  main.cpp
src/: lama_launcher.cpp  main.rs
vscode-helpllm/: CHANGELOG.md  README.md  package.json  pnpm-lock.yaml
vscode-helpllm/src/: extension.ts
